--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">NewNEWS</string>
     <string name="togglebutton">ToggleButton</string>
+    <string name="name">Name</string>
+    <string name="title">Title</string>
+    <string name="author">Author</string>
     <string name="button">Button</string>
 </resources>
