--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_help">Help</string>
+    <string name="action_register">Register</string>
+    <string name="action_signin">Sign-In</string>
+    <string name="action_signout">Sign-Out</string>
     <string name="action_contact">Contact Us</string>
     <string name="action_search">Search</string>
     <string name="action_about">About</string>
