--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="news_title">News Title</string>
     <string name="image_description">Image Description</string>
     <string name="new_content">New content</string>
+    <string name="home">Home</string>
 </resources>
