--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="image_description">Image Description</string>
     <string name="content">Content</string>
     <string name="time">Time</string>
+    <string name="share">Share</string>
 </resources>
