--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="content">Content</string>
     <string name="time">Time</string>
     <string name="share">Share</string>
+    <string name="webpage">Link (if any)</string>
 </resources>
