--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="time">Time</string>
     <string name="share">Share</string>
     <string name="webpage">Link (if any)</string>
+    <string name="username_or_email">Username or Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="save_password">Save Password</string>
 </resources>
